--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@
 	background: #FCFCFC;
 }
 .section__two{
-	background: #76b5ca;
+	background: #FA9EC1;
 }
 .section__three {
 	background: #FCFCFC;
 }
 .section__four{
-	background: #76b5ca;
+	background: #FA9EC1;
 }
 
 /* Section Heading Styles */
@@ -60,6 +60,6 @@ h2{
   font-family: 'Roboto Mono';
   font-size: 1.5rem;
   line-height: 1.5;
-  color: #76b5ca;
+  color: #FA9EC1;
 	margin: 0 0 30px 30px;
 }
